[package]
name = "building-solana"
version = "0.1.0"
authors = ["Building Solana"]
edition = "2021"
description = ""

[dependencies]
solana-sdk = "1.10"
solana-client = "1.10"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
