[package]
name = "building-solana"
version = "0.1.0"
authors = ["Building Solana"]
edition = "2021"
description = ""

[workspace]
members = ["blocks", "validator", "transaction-constructor"]

[dependencies]
solana-sdk = "1.10"
solana-client = "1.10"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
tonic = "0.10"
jemallocator = { version = "0.5", optional = true }
cached = "0.46"
dashmap = "5.5"
builder_validator = "0.2"
solana-streamer = { workspace = true }
serde_yaml = "0.9"
openssl = "0.10"
openssl-sys = "0.9"
crossbeam-channel = "0.5"
builder_block = "0.5"
